[project]
name = "multiechelonpls"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "BenSLowery", email = "benjaminslowery@outlook.com" }
]
requires-python = ">=3.10.6"
dependencies = [
    "pandas>=2.3.2",
    "scipy>=1.15.3",
]

[project.scripts]
multiechelonpls = "multiechelonpls:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
